[project]
name = "members-card"
description = "Generation of members cards"
license = "GPL-3.0-or-later"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "fpdf2 >= 2.8.3",
    "pandas",
    "qrcode"
]

authors = [
    {name = "hollysaiqs", email="hollysaiqs@famillemarceau.fr"}
]

[project.scripts]
members-card = "members_card.main:cli"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]